# ChangeLog for sci-libs/armadillo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/armadillo/ChangeLog,v 1.15 2012/06/07 18:44:46 bicatali Exp $

*armadillo-3.2.2 (07 Jun 2012)

  07 Jun 2012; Sébastien Fabbro <bicatali@gentoo.org> +armadillo-3.2.2.ebuild:
  Version bump

  25 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> armadillo-3.0.2.ebuild:
  Works on ppc -> keyword.

  25 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> -armadillo-2.4.4.ebuild,
  -armadillo-3.0.1.ebuild, armadillo-3.0.2.ebuild:
  Stabilise latest on amd64 and x86. Seems to work with new sci-libs/gdal.
  Remove older.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> armadillo-2.4.4.ebuild,
  armadillo-3.0.1.ebuild, armadillo-3.0.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*armadillo-3.0.2 (24 Apr 2012)

  24 Apr 2012; Sébastien Fabbro <bicatali@gentoo.org> +armadillo-3.0.2.ebuild:
  Version bump

*armadillo-3.0.1 (13 Apr 2012)

  13 Apr 2012; Sébastien Fabbro <bicatali@gentoo.org> -armadillo-2.2.5.ebuild,
  -armadillo-2.4.3.ebuild, +armadillo-3.0.1.ebuild:
  Version bump

*armadillo-2.4.4 (06 Mar 2012)

  06 Mar 2012; Sébastien Fabbro <bicatali@gentoo.org> -armadillo-2.4.2.ebuild,
  +armadillo-2.4.4.ebuild:
  Version bump

*armadillo-2.4.3 (15 Feb 2012)

  15 Feb 2012; Sébastien Fabbro <bicatali@gentoo.org> +armadillo-2.4.3.ebuild:
  Version bump

*armadillo-2.4.2 (20 Dec 2011)

  20 Dec 2011; Sébastien Fabbro <bicatali@gentoo.org> +armadillo-2.4.2.ebuild:
  Version bump

*armadillo-2.2.5 (27 Nov 2011)

  27 Nov 2011; Sébastien Fabbro <bicatali@gentoo.org> -armadillo-2.2.1.ebuild,
  -armadillo-2.2.3.ebuild, +armadillo-2.2.5.ebuild:
  Version bump

*armadillo-2.2.3 (01 Sep 2011)

  01 Sep 2011; Sébastien Fabbro <bicatali@gentoo.org> -armadillo-1.1.6.ebuild,
  -armadillo-1.2.0.ebuild, -armadillo-2.0.2.ebuild, +armadillo-2.2.3.ebuild:
  Version bump

*armadillo-2.2.1 (06 Aug 2011)
