@@ -1,16 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
-DIST armadillo-3.0.2.tar.gz 2918529 RMD160 fdcb0934854c1331ede9ae72e74b84cd18f550b7 SHA1 238a389715809f261b8d33f62a87e8358dcedeee SHA256 64e38459dfa4bba97ad92ffcdc855921ff22a12d01c61a14e3049af522ea21c0
-DIST armadillo-3.2.2.tar.gz 2932207 RMD160 407ddc2b1b3c67f87248dccfce786a4da2ed9e06 SHA1 3b251765af0edf4fd940cd153da0952152b09a70 SHA256 371ca6a12951c663a4244a7569b940e514441795254a545db82c5f02df2cbe60
-EBUILD armadillo-3.0.2.ebuild 1405 RMD160 95b9481a3ac939fd16af0f845f2e68c26987e8ee SHA1 b0745995fa21c9648ca51c61ea4fce3a51c80e90 SHA256 43efb8d1db69dbbdf4e7456b4bd3399738c55b6b77aaf8fe6e389b1458c79441
-EBUILD armadillo-3.2.2.ebuild 1406 RMD160 2192fb9eeaffa59ca5599a7ab2a5a15b3f9600cc SHA1 e75d8683be38ba9dfae0c7eb4972521a22dcf5ed SHA256 f4dcb2419fbf62d21679af336f82429c08b97de38aa6a6b0105652feee73df7c
-MISC ChangeLog 2728 RMD160 916fff0c111901b2a63f3e8bcd9c2c17e9809ecb SHA1 d6cb1eac863aceefcb9043603173cd4e2652d607 SHA256 6417e1545641bfc389cdf53f64d6309b07c2fee7409650676d812179112be8e2
-MISC metadata.xml 938 RMD160 5bc8667971361af5e848c038f53acb6e8c974f67 SHA1 3dde90b456147fec82470d6a5804489c1b0c91cb SHA256 c26e73cdee3f87e18188e53385b69ef7d90603a040c5eaf13463c648259c4de3
+DIST armadillo-3.0.2.tar.gz 2918529 SHA256 64e38459dfa4bba97ad92ffcdc855921ff22a12d01c61a14e3049af522ea21c0
+DIST armadillo-3.2.2.tar.gz 2932207 SHA256 371ca6a12951c663a4244a7569b940e514441795254a545db82c5f02df2cbe60
+DIST armadillo-3.2.4.tar.gz 2932867 SHA256 ed5160b779d60ddc5bbe64620c53097b4a65082b9d5739ff24a89de17349f7a2 SHA512 35084b32875b78f9ebebac24444d8a981e40ac01d3e50629bac0d3c6809a016f32f1f8faac9e9102cde6a44168bec95a0d8dc171b819e787f4da44837c173b2a WHIRLPOOL 35a21bd61350cca29b67bb23f108a4e1d0cfb5a3f29f29800414e6bdce799a6744897824b5956c1c1356c0914c5dd111ebef8ad4f6fa7e4c7872bf6879634f51
+EBUILD armadillo-3.0.2.ebuild 1405 SHA256 43efb8d1db69dbbdf4e7456b4bd3399738c55b6b77aaf8fe6e389b1458c79441 SHA512 65e2b9f196ea0c130711f2a8fdd28bb21d0a75e58e8f6179feb8bdda57d22a121430984639b8bc5d278d9adb2ea5a220becd145d74d7c0f3a9e2e6ced1e8d6dd WHIRLPOOL b69cf7fc9ea59cc91e52f8c9c7d9110bfdb6b9892d31a8a3d0311d9eb92ddd7a9df5611bf5c7fe56ea091e263ad68893d19ef91d4a70daa2cffa9606f9f14111
+EBUILD armadillo-3.2.2.ebuild 1406 SHA256 f4dcb2419fbf62d21679af336f82429c08b97de38aa6a6b0105652feee73df7c SHA512 7e17125a6a8ed05cf0a6ea22d4bf1c7a9a3da89297705a8344457de8e8cd67918703eb6d12d0db33d3b906b9a436acb5d0f208faeae7e435f98294c4147fe315 WHIRLPOOL 449217ce3b3f346773df9300e4387e55b1b2314e002ef6d303430fd90c96d3a4717a8a19fe5bfd374ec2f3193844be600fb8d086d5c052d9b741da5f6bad936b
+EBUILD armadillo-3.2.4.ebuild 1558 SHA256 b160ce221608de2770b4cb284037529fe28c8b0aff2c98b8cbb6eb8b4934bb84 SHA512 fb14c93f364e67b5c86fb1163cb2038758035258705548ed5b71c12717ed93c6eab9c0d8bf141151aaae6e997de1335e33633a5d0ea71b4e2a7e5b596c6d4073 WHIRLPOOL d71b983182a3a00f4ecb687eed3ebee8352786f632b2099fe32dcf4ee8bc3697843f58fd3d6d2d08af542c60f1a0b508f290a410c108f83a4a8966a577c99208
+MISC ChangeLog 2911 SHA256 76345a3f9bb2520865c8291eed844ebd91c6b6f98a930117727ca21aa83a50a1 SHA512 5dfb294e2bc3b2883cc8937e0a1b933c14486f80c26ec8e0f99e9a37b40149b2373e97dfa69ab1651a3b7bea8bb6200c0a3d652bf2ede34904e1de8f6ac4dc3b WHIRLPOOL 7104a1c67a9b0e2c6cdff1b0f9115293a42463fa5a4bb43db69abe21c27942b28d812d70fde6e136d5ce67638f09600b9555742db956f223e57a2e44d2f8dde0
+MISC metadata.xml 938 SHA256 c26e73cdee3f87e18188e53385b69ef7d90603a040c5eaf13463c648259c4de3 SHA512 1453d36ae8d4d7735e304f1b16280ab6d41fe586785713287fcaa68aac9fbd2ec046ee87e3332f6862f3af0695e8769ad1708835250175eaab387001b833a252 WHIRLPOOL 8fa5d490e934d4b62187a16ef542c1046588277e291134cc30c527f3061f69232fd2bfabfb40999896cdda19f504e9c054a422dbefcb33a623db25295d175944
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk/Q9qcACgkQ1ycZbhPLE2AfJQCgsWBHUhlIIQiZ8ID7sPXhNZUh
-0mYAniPrh2kwTciATMjh/yoFv8VpRy8T
-=cbbL
+iEYEAREKAAYFAlAJ0uoACgkQ1ycZbhPLE2AewACgqNm4xC5URyO6ZxnCfVC5Nb9p
+gr4AnRfxN5czkgqXsT1xz1r7HizFIkOE
+=dtpg
 -----END PGP SIGNATURE-----
