@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/armadillo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/armadillo/ChangeLog,v 1.15 2012/06/07 18:44:46 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/armadillo/ChangeLog,v 1.16 2012/07/20 21:51:23 bicatali Exp $
+
+*armadillo-3.2.4 (20 Jul 2012)
+
+  20 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> +armadillo-3.2.4.ebuild:
+  Version bump. Added examples flag, keyworded amd64-linux, x86-linux
 
 *armadillo-3.2.2 (07 Jun 2012)
 
